# housing-prediction

./: LICENSE  README.md  init.sh  main.py  pyproject.toml  zillow_chicago_scraper.py
docs/mkdocs/: mkdocs.yml
docs/mkdocs/docs/: index.md
housing_prediction/: __init__.py  config.py  dataset.py  features.py  models.py  predict.py  train.py  utils.py
notebooks/: 00-explore.ipynb  01-training.ipynb  chicago_housing_prediction v1.ipynb  chicago_housing_prediction v2.ipynb
